# world-model-collapse

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/: effect_sizes.py  scstar_bootstrap_cis.py  stage4_g1_acceptance.py  stage4_g1_acceptance_v2.py
analysis/scripts/: _common.py  tier2_lags.py  tier2a_g1b.py  tier2b_g4.py  tier2c_lee_drift.py  tier2d_multiple_testing.py  tier2e_cluster_bootstrap.py
experiments/critical_scans/: _common.py  run_exp_sc_fine.py  run_exp_t_fine.py
experiments/cross_harness/: _common.py  run_exp_C1_llama3.py  run_exp_C2_gpt4o.py  run_exp_b_mode_a.py
experiments/pilot/: run_err_fix_smoke.py  run_pilot_p0_p1.py  run_pilot_p1_step2.py  run_pilot_p2.py  run_pilot_p4.py  run_pilot_p5.py
experiments/stage4_g1_trigger/: run_stage4_g1_trigger.py
experiments/stage5_a/: run_stage5_a.py
experiments/stage5_b/: run_stage5_b.py
experiments/stage5_smoke/: run_stage5_smoke.py
experiments/stage5b_ablations/: _common.py  run_stage5b_ablation_T.py  run_stage5b_ablation_branching.py  run_stage5b_ablation_mut_rate.py  run_stage5b_ablation_obs_noise.py
src/agents/: __init__.py  base.py  json_parser.py  llm_agent.py  llm_client.py  oracle.py  prompts.py
src/environments/: __init__.py  base.py  graph_nav.py  stateful_puzzle.py  tool_dag.py
src/evaluation/: __init__.py  jsonl_logger.py  runner.py
src/runner/: __init__.py  cost_tracker.py  pilot_runner.py
