[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plancollapseworlds"
version = "0.1.0"
description = "Deterministic planning environments and runners for studying world-model collapse in LLM agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.50.0",
    "requests>=2.30.0",
    "numpy>=1.26.0",
    "boto3>=1.34.0",
]

[tool.setuptools]
packages = ["src", "src.agents", "src.environments", "src.evaluation", "src.runner"]
